# cci-hierarchical-naming-analysis

./: .gitignore  README.md
doc/: main.org
examples/: CMakeLists.txt  scenario_1.cpp
